--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vuex": "^4.0.0",
     "express": "*",
     "body-parser": "*",
-    "bcrypt": "^0.8.5"
+    "bcrypt": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
