--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcrypt": "*",
+    "body-parser": "*",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0",
-    "express": "*",
-    "body-parser": "*",
-    "bcrypt": "*"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
