--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "express": "^4.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -36,7 +37,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "express": "^4.17.3",
     "jest": "^27.0.5",
     "prettier": "^2.4.1",
     "serve-static": "^1.15.0"
