--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "serve-static": "1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
