--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "body-parser": "*",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "express": "^4.17.3",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0",
-    "express": "^4.17.3",
-    "serve-static": "1.15.0"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -39,7 +39,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "prettier": "^2.4.1",
-    "serve-static": "^1.15.0"
+    "prettier": "^2.4.1"
   }
 }
